Huge revamp of the Item Builder Profile Crawling now double checks item stats.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,8 +14,12 @@
 	<script type="text/javascript" src="/js/underscore.js"></script>
 	<script type="text/javascript" src="/js/chosen.jquery.js"></script>
 	<script type="text/javascript" src="/js/site.js"></script>
-	<script type="text/javascript" src="/js/tooltip.js"></script>
 	<script type="text/javascript" src="/js/jquery.diff.js"></script>
+
+	<script type="text/javascript" src="/js/skills.js"></script>
+	<script type="text/javascript" src="/js/itembuilder.js"></script>
+
+	<script type="text/javascript" src="/js/tooltip.js"></script>
 	
 	<script type="text/javascript" src="/js/jquery.dataTables.js"></script>
 	<script type="text/javascript" language="javascript" src="/js/jquery.dropdown.js"></script>
