Revamped Skill Chooser Updated system message

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -82,7 +82,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Since Blizzard now released their Character Profiles, I decided to setup an import for it to pull in your gear. <a href="http://d3up.com/update/23">Read all about it on this update</a>. It's still extremely experimental and will possibly mess up your DPS calculations (atleast for today, not permanently)! Let me know how it works for you in the feedback tab or as a <a href="http://d3up.com/update/23">comment on this update</a>.
+					<b>System Message</b>: Aug 8 - I've just released another major upgrade on the site, improving a bit on the Character Import process and completely rebuilding the "Item Creator". Get the <a href="http://d3up.com/update/24">full details on this update</a>! As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 				</div>
 			</div>
 		</div>
