Pure CSS Drop down menu.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/css/style.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/chosen.css" type="text/css" charset="utf-8">	
 	<link rel="stylesheet" href="/css/tooltip.css" type="text/css" charset="utf-8">	
-	<link rel="stylesheet" href="/css/jquery.dropdown.css" type="text/css" media="screen, projection"/>
+	<link rel="stylesheet" href="/css/dropdown.css" type="text/css" media="screen, projection"/>
 
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
@@ -22,7 +22,6 @@
 	<script type="text/javascript" src="/js/tooltip.js"></script>
 	
 	<script type="text/javascript" src="/js/jquery.dataTables.js"></script>
-	<script type="text/javascript" language="javascript" src="/js/jquery.dropdown.js"></script>
 	
 </head>
 <body>
