Updated item builder. Changed Menu a bit

--- a/public_html/css/dropdown.css
+++ b/public_html/css/dropdown.css
@@ -24,7 +24,7 @@ ul#navigation li a {
 	padding: 5px 15px;
 	display: block;
 	text-decoration: none;
-	padding: 5px 15px 5px 15px;
+	padding: 5px 20px 5px 15px;
 	margin-left: 1px;
 	white-space: nowrap;
 }
@@ -33,10 +33,10 @@ ul#navigation li a:hover {
 }
 ul#navigation li:hover ul {
 	display: block;
-	position: absolute;
+ 	position: absolute;
 }
 ul#navigation li:hover li {
-    float: none;
+	
 }
 ul#navigation li:hover a { 
 
@@ -44,9 +44,12 @@ ul#navigation li:hover a {
 ul#navigation li:hover li a:hover {
 
 }
+ul.sub_menu {
+
+}
 ul.sub_menu > li {
 	background: #191919;
-	font-size: 0.9em;
+	font-size: 1em;
 	text-align: left;
 	height: 42px;
 	line-height: 32px;
@@ -54,10 +57,10 @@ ul.sub_menu > li {
 	background-position: middle left;	
 }
 ul#navigation > li ul.sub_menu > li a {
-	padding-left: 46px;
+	padding-left: 52px;
 }
 ul.sub_menu > li.barbarian {
-	background-image: url('/images/barbarian.png') !important;
+	background-image: url('/images/barbarian.png');
 }
 ul.sub_menu > li.wizard {
 	background-image: url('/images/wizard.png');
