--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -81,7 +81,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 8 - (UPDATE: Copy from BNet is working now) I've just released another major upgrade on the site, improving a bit on the Character Import process and completely rebuilding the "Item Creator". Get the <a href="http://d3up.com/update/24">full details on this update</a>! As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+					<b>System Message</b>: Aug 8 - (UPDATE: Item Pricer is fixed now too) I've just released another major upgrade on the site, improving a bit on the Character Import process and completely rebuilding the "Item Creator". Get the <a href="http://d3up.com/update/24">full details on this update</a>! As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 				</div>
 			</div>
 		</div>
