Bunch of Small Changes
Conditional Logic for a few passive skills
Added EHP/DPS Gains per Stat

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -235,6 +235,7 @@ var activeActives = [];
 			<li><a href="#tab-base">Stats</a></li>
 			<li><a href="#tab-dps">DPS</a></li>
 			<li><a href="#tab-ehp">EHP</a></li>
+			<li><a href="#tab-gains">Gains</a></li>
 		</ul>
 		<div style="background-image: none; padding: 15px 15px 0">
 			<select id="vsLevel">
@@ -257,6 +258,10 @@ var activeActives = [];
 		<div id="tab-ehp">
 			<ul id="stats-ehp"><li>test</li></ul>
 			<ul id="stats-ehp-gear"></ul>
+		</div>
+		<div id="tab-gains">
+			<ul id="stats-dps-gains" class="resist-specific"></ul>
+			<ul id="stats-ehp-gains" class="resist-specific"></ul>
 		</div>
 	</div>
 </div>
