--- a/application/views/scripts/user/builds.phtml
+++ b/application/views/scripts/user/builds.phtml
@@ -97,6 +97,7 @@
 	</table>
 	<? else: ?>
 	<p>You don't have any characters yet!</p>
-	<p>Click the "Add Hero" button above to get started.</p>
+	<p>Click the "Add Character Build" button above to get started.</p>
+	<a href="/build/create" style="padding: 5px 20px" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">Add Character Build</a>
 	<? endif; ?>
 <? endif; ?>
