updated forgot text.

--- a/application/views/scripts/user/forgot-email.phtml
+++ b/application/views/scripts/user/forgot-email.phtml
@@ -2,13 +2,13 @@
 $uri = "http://".$_SERVER['HTTP_HOST']."/user/change-password?id=".$this->user->_id."&key=".$this->user->resetHash;
 ?>
 
-You have requested to reset your password on D3Up.com.
+<p>You have requested to reset your password on D3Up.com.</p>
 
-Please visit: <a href="<?= $uri ; ?>"><?=$uri?></a> where you will be asked to set a new password.
+<p>Please visit: <a href="<?= $uri ; ?>"><?=$uri?></a> where you will be asked to set a new password.</p>
 
-This link is only valid for (6) hours, after that, you will have to issue another password reset request.
+<p>This link is only valid for (6) hours, after that, you will have to issue another password reset request.</p>
 
 
-Thanks!
+<p>Thanks!</p>
 
-- The Password Goblins
+<p>- The Password Goblins</p>
