--- a/public_html/css/tooltip.css
+++ b/public_html/css/tooltip.css
@@ -77,6 +77,9 @@
 	margin: 10px 5px;
 	padding: 0;
 }
+.d3-item .item ul.attrs .value {
+	color: #A4A4C0;
+}
 .d3-item .item ul {
 	font-size: 16px;
 }
