--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -302,5 +302,5 @@ var activeActives = [];
 	var isLoggedIn = false;
 	<? endif ?>
 </script>
-<script type="text/javascript" src="/js/unmin/calcv2.js?time=<?= time() ?>"></script>
-<script type="text/javascript" src="/js/unmin/build.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/calcv2.js?time=<?= time() ?>"></script>
+<script type="text/javascript" src="/js/build.js?time=<?= time() ?>"></script>
