--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -22,6 +22,9 @@
 						<? if($build->actives): ?>
 							<? foreach($build->actives as $active): ?>
 								<? 
+									if(!$active) {
+										continue;
+									}
 									$explode = explode("~", $active);
 									$skill = $explode[0];
 								?>
@@ -171,19 +174,21 @@
 <script type="text/javascript">
 	$(function() {
 		$("td.skills img").each(function() {
-			var skill = activeSkills[$(this).attr("data-class")][$(this).attr("data-id")];
-			if(!skill) {
-				skill = passives[$(this).attr("data-class")][$(this).attr("data-id")];
-				skill.name = $(this).attr("data-id").replace(/\-/g," ").capitalize();
-			}
-			var tooltip = skill.desc;
-			if(skill) {
-				if(skill.rune) {
-					tooltip = tooltip + "<br/><br/>" + skill.rune;
+			if($(this).data("id") != "undefined") {
+				var skill = activeSkills[$(this).attr("data-class")][$(this).attr("data-id")];
+				if(!skill) {
+					skill = passives[$(this).attr("data-class")][$(this).attr("data-id")];
+					skill.name = $(this).attr("data-id").replace(/\-/g," ").capitalize();
 				}
-				$(this).attr("data-name", skill.name);
-				$(this).attr("data-tooltip", tooltip);
-				$(this).bindSkilltip();				
+				var tooltip = skill.desc;
+				if(skill) {
+					if(skill.rune) {
+						tooltip = tooltip + "<br/><br/>" + skill.rune;
+					}
+					$(this).attr("data-name", skill.name);
+					$(this).attr("data-tooltip", tooltip);
+					$(this).bindSkilltip();				
+				}				
 			}
 		});
 	});
