--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -22,7 +22,10 @@
 						<? if($build->actives): ?>
 							<? foreach($build->actives as $active): ?>
 								<? 
-									if(!$active) {
+									if($active == "undefined") {
+										?>
+										<img data-class="<?= $build->class ?>" src="/images/icons/unknown.png" class="skill-tip"/>
+										<?
 										continue;
 									}
 									$explode = explode("~", $active);
