--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -177,7 +177,7 @@
 <script type="text/javascript">
 	$(function() {
 		$("td.skills img").each(function() {
-			if($(this).data("id") != "undefined") {
+			if($(this).data("id") && $(this).data("id") != "undefined") {
 				var skill = activeSkills[$(this).attr("data-class")][$(this).attr("data-id")];
 				if(!skill) {
 					skill = passives[$(this).attr("data-class")][$(this).attr("data-id")];
