Some SEO optimizations. Attempting fix on reedit monk

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,6 +1,9 @@
 <!doctype html>
 <head>
-	<?= $this->headTitle("Diablo 3 Build Calculator")->setSeparator(' | '); ?>
+	<?= $this->headTitle("Diablo 3 DPS/EHP Calculator")->setSeparator(' | '); ?>
+	<meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
+	<meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
+	
 	<link rel="stylesheet" href="/css/jquery.dataTables.css" type="text/css" charset="utf-8">	
 	
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
@@ -32,6 +35,7 @@
 			</div>
 			<div id="header-content" class="inline-flow">
 				<div id="navigation-wrapper">
+					<h1 class="table-header">Diablo 3 EHP/DPS/Gear Calculator</h1>
 					<ul id="navigation" class="dropdown ui-helper-clearfix ui-widget ui-widget-content"  style="text-align: center">
 						<li><a href="/">Home</a></li>
 						<li><a href="/items">Items</a>
