Improved the Menus

--- a/public_html/css/dropdown.css
+++ b/public_html/css/dropdown.css
@@ -18,7 +18,7 @@ ul#navigation li ul {
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	background: #191919;
+	background: #222;
 }
 ul#navigation li a {
 	padding: 5px 15px;
@@ -28,9 +28,6 @@ ul#navigation li a {
 	margin-left: 1px;
 	white-space: nowrap;
 }
-ul#navigation li a:hover {
-	
-}
 ul#navigation li:hover ul {
 	display: block;
 	position: absolute;
@@ -38,29 +35,33 @@ ul#navigation li:hover ul {
 ul#navigation li:hover li {
     float: none;
 }
-ul#navigation li:hover a { 
-
-}
-ul#navigation li:hover li a:hover {
-
-}
 ul.sub_menu {
 	z-index: 10;
+	border: 1px solid #000;
 }
 ul.sub_menu > li {
-	background: #191919;
+	border-top: 1px solid #000;
+	background: #222;
 	font-size: 1em;
 	text-align: left;
 	height: 42px;
 	line-height: 32px;
 	background-repeat: no-repeat; 
 	background-position: middle left;	
+	cursor: pointer;
+}
+ul.sub_menu > li:first-child {
+	border-top: 0px;
+}
+ul#navigation li:hover,
+ul.sub_menu > li:hover {
+	background-color: #333;
 }
 ul#navigation > li ul.sub_menu > li a {
 	padding-left: 56px;
 }
 ul.sub_menu > li.barbarian {
-	background-image: url('/images/barbarian.png') !important;
+	background-image: url('/images/barbarian.png');
 }
 ul.sub_menu > li.wizard {
 	background-image: url('/images/wizard.png');
