--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -38,7 +38,7 @@
 					<h1 class="table-header">Diablo 3 EHP/DPS/Gear Calculator</h1>
 					<ul id="navigation" class="dropdown ui-helper-clearfix ui-widget ui-widget-content"  style="text-align: center">
 						<li><a href="/">Home</a></li>
-						<li><a href="/items">Items</a>
+						<li><a href="/items">Items <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/item/create">Create Item</a></li>
 								<li><a href="/user/items">My Items</a></li>
@@ -46,7 +46,7 @@
 								<li><a href="/item/sales-history">Sales History</a></li>
 							</ul>
 						</li>
-						<li><a href="/build">Builds</a>
+						<li><a href="/build">Builds <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/build/create">Create Build</a></li>
 								<li><a href="/user/builds">My Builds</a></li>
@@ -58,21 +58,21 @@
 								<li><a href="/build">All Builds</a></li>
 							</ul>
 						</li>
-						<li><a href="/user/shop">My Shop</a>
+						<li><a href="/user/shop">My Shop <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/item/pricer">Item Pricer</a></li>
 							</ul>
 						</li>
 						<?  if(true == false): ?>
-						<li><a href="/bazaar">Bazaar</a>
+						<li><a href="/bazaar">Bazaar <img src='/images/down-arrow.png' /></a>
 							<ul class="sub_menu">
 								<li><a href="/user/shop">My Shop</a></li>
 							</ul>
 						</li>					
 						<? endif ?>
 						<li><a href="/updates">Updates</a></li>
-						<li><a>User</a>
-							<ul>
+						<li><a>User <img src='/images/down-arrow.png' /></a>
+							<ul class="sub_menu">
 							<? if($profile = Epic_Auth::getInstance()->getProfile()): ?>
 								<!-- <li><a href="/user"><?= $profile->username ?></a></li>	 -->
 								<li><a href="/user/change-password">Change Password</a></li>
