--- a/application/views/scripts/record/crawl.phtml
+++ b/application/views/scripts/record/crawl.phtml
@@ -33,24 +33,39 @@
 	</div>
 <? else: ?>
 	<div class="ui-widget ui-corner-all ui-widget-content ui-helper-clearfix" style="padding: 20px">
-		<h2 style="color: #00C800">Are you sure you want to make a copy from Battle.net?</h2>
-		<p style="font-size: 1.2em; line-height: 1.6em">
-			Please take a moment to ensure that this link goes to your Character:
-		</p>
-		<p style="font-size: 1.2em; line-height: 1.6em">
-			<a href="<?= $this->record->profileUrl ?>"><?= $this->record->profileUrl ?></a>
-		</p>
-		<p style="font-size: 1.2em; line-height: 1.6em">
-			You can change the link to your character profile by visiting the <a href="/b/<?= $this->record->id ?>/edit">Edit Build</a> page.
-		</p>
-		<p style="font-size: 1.2em; line-height: 1.6em">
-			Copying your profile from Battle.net will equip all of the gear that currently shows on your Battle.net profile. Your old gear will still exist in the database, but your current gear will all change to reflect whatever is showing currently on your profile.
-		</p>
-		<p>
-			Please confirm your decision:
-		</p>
-		<p>
-			<a href="?confirm=true" class='ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only' style="padding: 5px; width: 450px">Yes, Copy my Profile.</a>
-		</p>
+		<h2 style="color: #00C800">Battle.net Character Copy</h2>
+		<p>You've chosen to import a character from the Diablo 3 Armory into this build:</p>
+		<h2>Build #<?= $this->record->id ?> - <?= $this->mLink($this->record) ?></h2>
+		<p>Please select which character's gear and skills we should import from below.</p>
+		<table id="all-builds" class="d3up-table">
+			<thead>
+				<th></th>
+				<th>Name</th>
+				<th>Class</th>
+				<th>Level</th>
+				<th>Mode</th>
+				<th>Actions</th>
+			</thead>
+			<tbody>
+				<? foreach($this->characters as $character): ?>
+				<tr class='build-row'>
+					<td class="icon"><img src="/images/<?= $character['class'] ?>.png"/></td>
+					<td><?= $character['name'] ?></td>
+					<td><?= ucwords(str_replace("-", " ", $character['class'])) ?></td>
+					<td>Level <?= $character['level'] ?></td>
+					<td>
+						<? if($character['hardcore']): ?>
+							Hardcore
+						<? else: ?>
+							Softcore
+						<? endif ?>
+					</td>
+					<td>
+						<a href="?character=<?= $character['id'] ?>">Copy this Character</a>
+					</td>
+				</tr>
+				<? endforeach ?>
+			</tbody>
+		</table>
 	</div>
 <? endif ?>
