--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -86,7 +86,7 @@
 					</ul>
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
-					<b>System Message</b>: Aug 8 - I revamped the view of items this evening, just go look at an item to see it. I also improved a bit on the similar item matching that happens on the page as well. As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
+					<b>System Message</b>: Aug 10 - The skill based DPS calculations got an update, you'll probably notice the numbers are slightly lower. I'm working with the new D3 API so updates will probably be pretty quiet this weekend. As always, feel free to contact me with any questions or concerns you might have at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>.
 				</div>
 			</div>
 		</div>
