--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="/js/jquery.diff.js"></script>
 
 	<script type="text/javascript" src="/js/skills.js"></script>
-	<script type="text/javascript" src="/js/itembuilder.js?v=3"></script>
+	<script type="text/javascript" src="/js/unmin/itembuilder.js?v=3"></script>
 
 	<script type="text/javascript" src="/js/tooltip.js"></script>
 	
