bunch of replacements for ie8

--- a/application/views/scripts/item/edit.phtml
+++ b/application/views/scripts/item/edit.phtml
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 $(function() {
 	// Establish the Builder
-	var builder = Object.create(itemBuilder);
+	var builder = new itemBuilder();
 	// Set the Name Field
 	builder.setNameInput($("#name"));
 	// Set the Quality Selector
