--- a/application/views/scripts/item/create.phtml
+++ b/application/views/scripts/item/create.phtml
@@ -12,7 +12,7 @@
 </div>
 <script type="text/javascript">
 // Establish the Builder
-var builder = new itemBuilder();
+var builder = Object.create(itemBuilder);
 // Set the Name Field
 builder.setNameInput($("#name"));
 // Set the Quality Selector
