--- a/application/views/scripts/item/pricer.phtml
+++ b/application/views/scripts/item/pricer.phtml
@@ -72,7 +72,7 @@
 	$("#pricer-stats").tabs();
 	$("#simulate-attributes, #itemType").chosen();
 	var similar = $("#similar-items");
-	var builder = new itemBuilder();
+	var builder = Object.create(itemBuilder);
 	// Set the Type Selector
 	builder.setItemTypeSelect($("#itemType"));
 	// Set the Attribute Selector
