Warning for IE < 9

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -28,6 +28,11 @@
 	
 </head>
 <body>
+	<!--[if lt IE 9]>
+	<div id="warning-browser">
+		<strong>WARNING</strong>: The browser you are using isn't supported by D3Up.com. You will most likely encounter parts of the site that just won't work. We recommend using <a href="https://www.google.com/intl/en/chrome/browser/">Chrome</a>, <a href="http://www.mozilla.org/en-US/firefox/new/">Firefox</a>, <a href="http://www.apple.com/safari/">Safari</a> or IE<strong>9</strong>+ for a better experience.
+	</div>
+  <![endif]-->
 	<div id="wrapper">
 		<div id="header">
 			<div class="inline-flow">
