--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -102,7 +102,8 @@
 			</div>
 		</div>
 		<div id="footer">
-			<p>D3Up.com - Created and maintained by <a href="http://greymass.com">Aaron Cox</a></p>
+			<h4>D3Up.com - Diablo 3 DPS / EHP / Gear Calculator and Tools</h4>
+			<p>Created and maintained by <a href="http://greymass.com">Aaron Cox</a></p>
 			<p>Want to support the site? Feel free to donate a couple bucks!</p>
 			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 			<input type="hidden" name="cmd" value="_s-xclick">
