Minification of JS/CSS

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,29 +3,25 @@
 	<?= $this->headTitle("Diablo 3 DPS/EHP Calculator")->setSeparator(' | '); ?>
 	<meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
 	<meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
-	
-	<link rel="stylesheet" href="/css/jquery.dataTables.css" type="text/css" charset="utf-8">	
-	
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
-	<link rel="stylesheet" href="/css/style.css" type="text/css" charset="utf-8">	
-	<link rel="stylesheet" href="/css/chosen.css" type="text/css" charset="utf-8">	
-	<link rel="stylesheet" href="/css/tooltip.css" type="text/css" charset="utf-8">	
-	<link rel="stylesheet" href="/css/dropdown.css" type="text/css" media="screen, projection"/>
 
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
-	<script type="text/javascript" src="/js/underscore.js"></script>
-	<script type="text/javascript" src="/js/chosen.jquery.js"></script>
-	<script type="text/javascript" src="/js/site.js"></script>
-	<script type="text/javascript" src="/js/jquery.diff.js"></script>
-
-	<script type="text/javascript" src="/js/skills.js"></script>
-	<script type="text/javascript" src="/js/itembuilder.js?v=3"></script>
-
-	<script type="text/javascript" src="/js/tooltip.js"></script>
-	
-	<script type="text/javascript" src="/js/jquery.dataTables.js"></script>
-	
+	<?= $this->headCss()
+			->appendStylesheet("/css/jquery.ui.css")
+			->appendStylesheet("/css/style.css")
+			->appendStylesheet("/css/chosen.css")
+			->appendStylesheet("/css/tooltip.css")
+			->appendStylesheet("/css/dropdown.css");
+	?>	
+	<?= $this->headJs()
+			->appendFile("/js/jquery.js")
+			->appendFile("/js/jquery-ui.js")
+			->appendFile("/js/underscore.js")
+			->appendFile("/js/chosen.jquery.js")
+			->appendFile("/js/site.js")
+			->appendFile("/js/jquery.diff.js")
+			->appendFile("/js/skills.js")
+			->appendFile("/js/unmin/itembuilder.js")
+			->appendFile("/js/tooltip.js")
+	?>
 </head>
 <body>
 	<!--[if lt IE 9]>
