--- a/application/views/scripts/item/sales-history.phtml
+++ b/application/views/scripts/item/sales-history.phtml
@@ -368,5 +368,7 @@
 		} ?>
 	</script>
 	<? endif ?>
-	<script type="text/javascript" src="/js/browser.js"></script>
+	<?= $this->headJs()
+			->appendFile("/js/unmin/browser.js")
+	?>
 <? endif ?>
