--- a/application/views/scripts/user/items.phtml
+++ b/application/views/scripts/user/items.phtml
@@ -360,8 +360,10 @@
 		} ?>
 	</script>
 	<? endif ?>
-	<script type="text/javascript" src="/js/calc.js"></script>
-	<script type="text/javascript" src="/js/browser.js"></script>
+	<?= $this->headJs()
+			->appendFile("/js/unmin/calc.js")
+			->appendFile("/js/unmin/build.js")
+	?>
 	<? else: ?>
 	<p>You don't have any items yet!</p>
 	<p>Click the "Add Item" button above to get started.</p>
