added query in front of the build calks.

--- a/application/views/scripts/record/build.phtml
+++ b/application/views/scripts/record/build.phtml
@@ -303,6 +303,7 @@ var activeActives = [];
 	<? endif ?>
 </script>
 <?= $this->headJs()
+		->appendFile("/js/jquery.js")
 		->appendFile("/js/unmin/calcv2.js")
 		->appendFile("/js/unmin/build.js")
 ?>
