--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -21,6 +21,8 @@
 			->appendFile("/js/skills.js")
 			->appendFile("/js/unmin/itembuilder.js")
 			->appendFile("/js/tooltip.js")
+			->appendFile("/js/unmin/calcv2.js")
+			->appendFile("/js/unmin/build.js")
 	?>
 </head>
 <body>
